--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
     "vinyl-buffer": "1.0.0",
     "vinyl-source-stream": "1.1.0",
     "watchify": "3.4.0"
+  },
+  "dependencies": {
+    "react-router": "^2.6.0"
   }
 }
